--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>zytao_admin</title>
+    <link rel="stylesheet" href="./static/css/normalize.css">
   </head>
   <body>
     <div id="app"></div>
